feat: Mailman 3 integration changes (#3676)
* feat: add command get_membership for Mailman 3

* fix: use options correctly

* fix: adjust handling of requests exceptions

* fix: add command get_subscriber_counts for mailman 3

* fix: fix indentation

* feat: add REST endpoint for importing a message

* fix: add exception handling when stashing message

* feat: add API documentation for message import
